Fix strerror_r in case it returns a pointer that is not our buffer

Task-number: QTBUG-10014
Reviewed-by: Trust Me